runfix: correct group icon dark mode background color [WPB-15794]

--- a/src/style/foundation/themes.less
+++ b/src/style/foundation/themes.less
@@ -29,16 +29,21 @@ body.theme-default {
   // Framework
   // ----------------------------------------------------------------------------
   @app-bg: var(--gray-10);
-  @sidebar-bg: var(--gray-20);
-  @sidebar-border-color: var(--gray-50);
-  @sidebar-folder-selected-bg: var(--gray-30);
   @border-color: var(--gray-40);
   @main-color: var(--black);
   @app-bg-secondary: var(--white);
+  @input-bar-bg: var(--white);
+
+  // ----------------------------------------------------------------------------
+  // Coversation Sidebar
+  // ----------------------------------------------------------------------------
+  @sidebar-bg: var(--gray-20);
+  @sidebar-border-color: var(--gray-50);
+  @sidebar-folder-selected-bg: var(--gray-30);
   @conversation-list-bg-opacity: fade(#000, 64%);
   @sidebar-box-shadow: #eee;
   @sidebar-box-shadow-lg: rgba(0, 0, 0, 0.12);
-  @input-bar-bg: var(--white);
+  @group-icon-bg: var(--white);
 
   // ----------------------------------------------------------------------------
   // Calling
@@ -133,14 +138,19 @@ body.theme-dark {
   // Framework
   // ----------------------------------------------------------------------------
   @app-bg: var(--gray-95);
-  @sidebar-bg: var(--gray-100);
-  @sidebar-border-color: var(--gray-95);
-  @sidebar-folder-selected-bg: var(--gray-95);
   @main-color: var(--white);
   @border-color: var(--gray-90);
   @app-bg-secondary: var(--black);
-  @conversation-list-bg-opacity: fade(#000, 78%);
   @input-bar-bg: var(--gray-100);
+
+  // ----------------------------------------------------------------------------
+  // Coversation Sidebar
+  // ----------------------------------------------------------------------------
+  @sidebar-bg: var(--gray-100);
+  @sidebar-border-color: var(--gray-95);
+  @sidebar-folder-selected-bg: var(--gray-95);
+  @conversation-list-bg-opacity: fade(#000, 78%);
+  @group-icon-bg: var(--gray-95);
 
   // ----------------------------------------------------------------------------
   // Calling
